--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tshet-uinh",
+  "name": "tshert-rwirn",
   "version": "0.15.0",
   "description": "A JavaScript library for the Qieyun phonological system",
   "main": "index.js",
